src/objects/RM2RMAMFG__c.object
<CustomObject>
    <fields>
        <fullName>MFGLocation__c</fullName>
        <formula>RM_Approved_MFG__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFGLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFGName__c</fullName>
        <formula>RM_Approved_MFG__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFGName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFGRegion__c</fullName>
        <formula>RM_Approved_MFG__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFGRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_Part_No__c</fullName>
        <label>Mfg Part No</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMDesc__c</fullName>
        <formula>Raw_Material__r.R_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMDesc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMName__c</fullName>
        <formula>Raw_Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Approved_MFG__c</fullName>
        <label>RM Approved MFG</label>
        <referenceTo>RM_Approved_MFG__c</referenceTo>
        <relationshipName>RM2RMAMFG</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipName>RM2RMAMFG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RM to Approved MFG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RMName__c</columns>
        <columns>RMDesc__c</columns>
        <columns>MFGName__c</columns>
        <columns>Mfg_Part_No__c</columns>
        <columns>MFGRegion__c</columns>
        <columns>MFGLocation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM2-{0000000000}</displayFormat>
        <label>RM2RMAMFG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM to Approved MFG</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>